# delivery_bot_ws

./: .gitignore  frames_2025-07-27_14.00.28.gv  frames_2025-07-27_14.01.14.gv  frames_2025-08-10_16.11.20.gv  frames_2025-08-14_22.15.48.gv  frames_2025-08-15_16.59.59.gv  frames_2025-08-18_14.14.39.gv  frames_2025-08-21_18.04.17.gv  frames_2025-08-25_16.15.47.gv  frames_2025-08-25_22.57.43.gv  frames_2025-08-29_01.17.34.gv  frames_2025-09-04_19.39.15.gv  frames_2025-09-04_19.42.49.gv  frames_2025-09-04_22.13.47.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/delivery_bot_control/share/delivery_bot_control/: DefaultRobotHWSim.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/delivery_bot_control/share/delivery_bot_control/cmake/: delivery_bot_controlConfig.cmake
install/delivery_bot_control/share/delivery_bot_control/config/: ekf.yaml  ekf_params.yaml  gains.yaml  joy.yaml  omni_controller.yaml  omni_controllers.yaml  omni_drive_controller.yaml  ros2_control.yaml  teleop_joy,yaml  teleop_joy.yaml
install/delivery_bot_control/share/delivery_bot_control/launch/: controls.launch.py
log/: latest_build  latest_list
rosbag2_2025_08_26-00_39_50/: metadata.yaml  rosbag2_2025_08_26-00_39_50_0.mcap
src/delivery_bot_control/: CMakeLists.txt
src/delivery_bot_control/config/: ekf.yaml  ekf_params.yaml  joy.yaml  omni_controller.yaml  omni_controllers.yaml  omni_drive_controller.params.yaml  omni_drive_controller.yaml  teleop.yaml  teleop_joy.yaml  teleop_params.yaml
src/delivery_bot_control/launch/: controls.launch.py
src/delivery_bot_control/src/: hardware_bridge_node.cpp  map_saver_node.cpp  odometry_node.py  omni_kinematics_node.py  omni_velocity_smoother.py  slam_wrapper_node.cpp  teleop_node.cpp  tf_broadcaster_node.py  wheel_direction_test.py
src/delivery_bot_control/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/delivery_bot_control/src/log/: latest_build
src/delivery_bot_description/: CMakeLists.txt  keys.sh  package.xml
src/delivery_bot_description/launch/: gazebo.launch.py
src/delivery_bot_description/sdf/: robot.sdf
src/delivery_bot_description/urdf/: robot_v3.xacro
src/delivery_bot_nav/: CMakeLists.txt  package.xml
src/delivery_bot_nav/config/: amcl_params.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  nav2_params.yaml  saved_locations.yaml  slam.params.yaml  slam_params.yaml
src/delivery_bot_nav/config/nav_config/: amcl_params.yaml
src/delivery_bot_nav/launch/: delivery_system.launch.py  localization.launch.py  location_navigator.launch.py  nav2_bringup.launch.py  nav2_bt_navigator.launch.py  navigation.launch.py
src/delivery_bot_nav/launch/install/: local_setup.sh  setup.sh
src/delivery_bot_nav/launch/log/: latest_build
src/delivery_bot_nav/maps/: my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml
src/delivery_bot_nav/rviz/: nav.rviz  slam.rviz
src/delivery_bot_nav/src/: command_interface.py  group_summary.csv  location_manager.py  odom_analyzer.py  omni_kinematics_tester.py  twist_to_stamped_node.py
src/delivery_bot_nav/src/Diagonal1/: samples.csv
src/delivery_bot_nav/src/Diagonal2/: samples.csv  summary.csv
src/delivery_bot_nav/src/Diagonal3/: samples.csv  summary.csv
src/delivery_bot_nav/src/Diagonal4/: samples.csv
src/delivery_bot_nav/src/X+/: samples.csv  summary.csv
src/delivery_bot_nav/src/X-/: samples.csv
src/delivery_bot_nav/src/Y+/: samples.csv
src/delivery_bot_nav/src/Y-/: samples.csv  summary.csv
src/delivery_bot_nav/src/YawCCW/: samples.csv  yaw_sign_check.txt
src/delivery_bot_nav/src/YawCW/: samples.csv  summary.csv  yaw_sign_check.txt
src/delivery_bot_nav/srv/: GetLocation.srv  ListLocations.srv  SaveLocation.srv
src/delivery_bot_slam/: CMakeLists.txt
src/delivery_bot_slam/config/: slam_params.yaml
src/delivery_launch/: CMakeLists.txt
src/delivery_logic/: CMakeLists.txt
src/face_recognition/: CMakeLists.txt
src/my_robot_description/: CMakeLists.txt  config.json  package.xml
src/my_robot_description/assets/: part_12.part  part_14.part  part_17.part  part_2.part  part_6.part  part_6.stl  part_7.part  wheel.stl
src/my_robot_description/install/: local_setup.sh  setup.sh
src/my_robot_description/install/my_robot_description/share/my_robot_description/: local_setup.sh  package.sh  package.xml
src/my_robot_description/install/my_robot_description/share/my_robot_description/launch/: gazebo.launch.py
src/my_robot_description/install/my_robot_description/share/my_robot_description/models/delivery_bot/: model.config
src/my_robot_description/install/my_robot_description/share/my_robot_description/models/delivery_bot/meshes/: column_support.part  part_10.part  part_10.stl  part_11.part  part_11.stl  part_15.part  part_17.stl  wheel.part
src/my_robot_description/install/my_robot_description/share/my_robot_description/models/delivery_bot_v2/meshes/: geared_dc_motor_with_encoder___ts_25ga370h.stl  part_1.part  part_11.part  part_12.part  part_16.part  part_20.stl  part_3.stl  part_4.part  part_5.part  part_5.stl  part_6.part  part_8.stl
src/my_robot_description/install/my_robot_description/share/my_robot_description/urdf/: robot_v3.xacro  robot_v4.xacro
src/my_robot_description/launch/: gazebo.launch.py  gazebo_launch.py  gazebo_v2.launch.py
src/my_robot_description/log/: latest_build
src/my_robot_description/models/delivery_bot/meshes/: part_13.part  part_19.part  part_1__2.part  part_20.part
src/my_robot_description/models/delivery_bot_v2/meshes/: column_support.stl  middle_plate.part  motor_mount.part  omni_wheel.part  part_10.part  part_17.part  part_2.part  part_9.part
src/my_robot_description/urdf/: config.json  robot_v2.urdf  robot_v2.xacro  robot_v3.xacro  robot_v4.xacro
src/my_worlds/worlds/: empty_with_lidar.sdf
src/nav_system/: CMakeLists.txt
src/nav_system/urdf/: robot.urdf
src/robot_description/: CMakeLists.txt
src/robot_description/config/: controller_config.yaml
src/servo_control/: CMakeLists.txt
(+428 files in other folders)
